# Pokemon-game

./: CMakeLists.txt  CONTRIBUTING.md  README.md
_codeql_build_dir/scripts/: electro_ball.py  eruption.py  flamethrower.py  slash.py  thunderbolt.py  water_gun.py
docs/: API.md  ARCHITECTURE.md  PYTHON_SKILLS.md
examples/: README.md
include/: Battle.h  Move.h  Pokemon.h  PythonSkillLoader.h  TypeEffectiveness.h
scripts/: heal.py  leech_seed.py  thunder_wave.py  toxic.py
src/: Battle.cpp  Move.cpp  Pokemon.cpp  TypeEffectiveness.cpp  main.cpp
